tasker/kubernetes/front-end-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-deployment
  namespace: default
  labels:
    app: front-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end
        image: s3249212/front-end:latest
        ports:
          - containerPort: 80
