tasker/kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: default
spec:
  selector:
    # matches with Deployment spec.selector.matchLabels
    app: db
  ports:
    - name: db-service
      protocol: "TCP"
      port: 27019
      targetPort: 27019
  type: NodePort
