tasker/kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tasker-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.minikube.info
    http:
      paths:
      - path: /
        backend:
          # matches with Service metadata.name
          serviceName: front-end-service
          servicePort: 80
